# hot-or-not-dapp

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  Cargo.toml  Dockerfile.dockerignore  README.md  canister_ids.json  dfx.json  ex.Dockerfile  ex.prod.fly.toml  ex.staging.fly.toml  license.md  lighthouserc.cjs  lighthouserc.js  package-lock.json  package.json  shell.nix  tsconfig.json  wc.Dockerfile  wc.prod.fly.toml  wc.staging.fly.toml
.git.sample/: readme.md
.git.sample/hooks/: pre-push
.github/: dependabot.yml
.github/actions/wc-deploy-ic/: action.yml
.github/actions/wc-deploy-pages/: action.yml
.github/actions/wc-wrangler/: action.yml
.github/workflows/: all_canisters_main_deploy.yml  all_canisters_test_suite_on_any_push.yml  backend-deploy.yml  experiments-deploy.yml  experiments-test.yml  frontend-deploy.yml  functions-deploy.yml  post_cache_canister_main_deploy.yml  post_cache_main_deploy.yml  user_index_canister_main_deploy.yml  wc-deploy-main.yml  wc-deploy.yml  wc-merge.yml  wc-test-pr.yml  wc-test.yml  web-client-deploy.yml  webclient-check.yml  webclient-deploy-test.yml  webclient-deploy.yml  webclient-merge.yml  webclient-playwright.yml  webclient-test-deploy.yml  webclient-test.yml  workers-deploy.yml
.github/workflows/canisters/post_cache/: main_deploy.yml  pull_request_tests.yml
.github/workflows/web-client/: webclient-deploy.yml  webclient-setup.yml
.github/workflows/webclient-setup/: action.yml
ic_repl_tests/: all_tests.sh
ic_repl_tests/individual_user_template/post/: post.test.sh  post_toggle_like_check_liked_by_me.test.sh
ic_repl_tests/individual_user_template/profile/: alice_follows_bob.test.sh
ic_repl_tests/post_cache/: newly_created_post.test.sh  post.test.sh  post_with_likes_and_shares.test.sh
ic_repl_tests/user_index/: create_new_users.test.sh
scripts/: ic_deploy.sh  local_deploy.sh
scripts/canisters/: ic_deploy.sh
scripts/canisters/ic_deploy/: deploy_all.sh  install_all.sh  install_new.sh  post_cache.sh  upgrade_all.sh  user_index.sh
scripts/canisters/local_deploy/: all_canisters.sh  build_all_canisters.sh  deploy_all.sh  install_all_canisters.sh  install_all_canisters_without_test.sh  internet_identity.sh  post_cache.sh  upgrade_all_canisters.sh  upgrade_all_canisters_without_test.sh  user_index.sh
scripts/canisters/post_cache/: local_deploy.sh
src/backend/: README.md
src/frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json
src/frontend/src/: app.html
src/frontend/src/components/lazy/: Lazy.svelte
src/frontend/src/components/navigation/: HamburgerButton.svelte  NavigationMenu.svelte
src/frontend/src/components/routing/: Transition.svelte
src/frontend/src/hooks/: index.js
src/frontend/src/routes/: IO.svelte  Video.svelte  __layout-ex.svelte  __layout-home.svelte  index@home.svelte
src/frontend/static/: manifest.webmanifest
(+3 files in other folders)
