[workspace]
members = [
  "packages/ic/canister/individual_user_template/api",
  "packages/ic/canister/individual_user_template/lib",
  "packages/ic/canister/post_cache/api",
  "packages/ic/canister/post_cache/lib",
  "packages/ic/canister/project_member_index/api",
  "packages/ic/canister/project_member_index/lib",
  "packages/ic/canister/user_index/api",
  "packages/ic/canister/user_index/lib",
  "packages/ic/lib/shared_utils",
  "packages/ic/lib/test_utils",
]

[workspace.dependencies]
candid = "0.8.4"
ic-cdk = "0.6.7"
ic-cdk-macros = "0.6.7"
ic-cron = "0.7.1"
ic-stable-memory = "0.2.6"
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "f7e3c96a2be92186718f6a1e67eea37bf3252c00" }
mockall = "0.11.3"
serde = "1.0.147"
speedy = "0.8.5"
