[workspace]
members = [
  "packages/hot-or-not-backend-canister/src/canister/configuration",
  "packages/hot-or-not-backend-canister/src/canister/data_backup",
  "packages/hot-or-not-backend-canister/src/canister/individual_user_template",
  "packages/hot-or-not-backend-canister/src/canister/post_cache/api",
  "packages/hot-or-not-backend-canister/src/canister/post_cache/lib",
  "packages/hot-or-not-backend-canister/src/canister/user_index",
  "packages/hot-or-not-backend-canister/src/lib/integration_tests",
  "packages/hot-or-not-backend-canister/src/lib/shared_utils",
  "packages/hot-or-not-backend-canister/src/lib/test_utils",
]

[workspace.dependencies]
candid = "0.8.4"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
ic-cdk = "0.6.10"
ic-cdk-macros = "0.6.8"
ic-cron = "0.7.1"
ic-stable-memory = "0.2.6"
ic-stable-structures = "0.4.1"
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "36f4a1c2903aed012b95b3b073e052c4036aef09" }
ic-test-state-machine-client = "1.0.0"
mockall = "0.11.3"
serde = "1.0.152"
speedy = "0.8.5"
